--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,12 +1,13 @@
 ---
 galaxy_info:
-  author: "Jonathan Nakatsui"
+  author: jnakatsui
   license: MIT
   min_ansible_version: 1.6
   platforms:
     - name: Ubuntu
       versions:
         - Precise
+        - Trusty
   categories:
     - web
 dependencies: []
