--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -31,11 +31,16 @@
     dest: "{{ deploy_tmp }}/{{ deploy_object }}"
     mode: "get"
   when: deploy_access_key is undefined
+- name: check that file exists
+  stat:
+    path: "{{ deploy_tmp }}/{{ deploy_object }}"
+  register: tarball
 - name: Untar tgz
   unarchive:
     src: "{{ deploy_tmp }}/{{ deploy_object }}"
     dest: "{{ deploy_tmp }}"
     copy: "no"
+  when: not tarball.exists
 - name: set permissions for untarred file
   file:
     path: "{{ deploy_tmp }}"
